[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rt_range"
version = "0.3.0"
description = "OxTS RT-Range data parsing utility"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0; python_version=='3.10'",
    "numpy>=1.24.0; python_version=='3.11'",
]
readme = "README.md"
license = {file = "LICENSE.txt"}
